--- a/Product.html
+++ b/Product.html
@@ -42,12 +42,12 @@
                     <!-- Left -->
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link waves-effect" href="#">Home
+                            <a class="nav-link waves-effect" href="index.html">Home
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link waves-effect" href="https://mdbootstrap.com/docs/jquery/" target="_blank">Product</a>
+                            <a class="nav-link waves-effect" href="#" target="_blank">Product</a>
                         </li>
         
                     </ul>
@@ -74,18 +74,15 @@
                 <div class="card-body text-white text-center py-5 px-5 my-5">
 
                     <h1 class="mb-4">
-                        <strong>Learn Bootstrap 4 with MDB</strong>
+                        <strong>?????</strong>
                     </h1>
                     <p>
-                        <strong>Best & free guide of responsive web design</strong>
+                        <strong>???</strong>
                     </p>
                     <p class="mb-4">
-                        <strong>The most comprehensive tutorial for the Bootstrap 4. Loved by over 500 000 users. Video and written
+                        <strong>The most comprehensive tutorial  Video and written
                             versions available. Create your own, stunning website.</strong>
                     </p>
-                    <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/" class="btn btn-outline-white btn-lg">Start free tutorial
-                        <i class="fas fa-graduation-cap ml-2"></i>
-                    </a>
 
                 </div>
                 <!-- Content -->
