--- a/index.html
+++ b/index.html
@@ -301,11 +301,11 @@
             <div class="col-xl-3 col-lg-6">
               <!--Grid row-->
               <div class="row">
-                <div class="col-2">
+                <div class="col-md-6">
                   <img src="david.png" class="img-fluid z-depth-1-half" alt="">
                 </div>
                 <div class="col-10 mb-2">
-                  <h5 class="feature-title font-bold mb-1">Davind Carter</h5>
+                  <h5 class="feature-title font-bold mb-1">David Carter</h5>
                   <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering & Cyber Security - Backend Developer
                   </p>
                 </div>
@@ -325,7 +325,7 @@
             <div class="col-xl-3 col-lg-6">
               <!--Grid row-->
               <div class="row">
-                <div class="col-2">
+                <div class="col-md-6">
                   <img src="oliver.png" class="img-fluid z-depth-1-half" alt="">
                 </div>
                 <div class="col-10 mb-2">
@@ -341,7 +341,7 @@
             <div class="col-xl-3 col-lg-6">
               <!--Grid row-->
               <div class="row">
-                <div class="col-2">
+                <div class="col-md-6">
                   <img src="matt.png" class="img-fluid z-depth-1-half" alt="">
                 </div>
                 <div class="col-10 mb-2">
@@ -358,7 +358,7 @@
             <div class="col-xl-3 col-lg-6">
               <!--Grid row-->
               <div class="row">
-                <div class="col-2">
+                <div class="col-md-6">
                   <img src="arvind.png" class="img-fluid z-depth-1-half" alt="">
                 </div>
                 <div class="col-10 mb-2">
