--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Product.html" target="_blank">Product</a>
+            <a class="nav-link" href="Product.html" target="_self">Product</a>
           </li>
         </ul>
 
@@ -239,7 +239,7 @@
             <!-- Main heading -->
             <h3 class="h3 mb-3">About us</h3>
             <p>
-              viTech is a software development team composed of six members from different disciplines that are currently undertaking CSIT321 at the University of Wollongong. The team aims to enhance the JIRA ecosystem by providing suggestive functionality using artificial intelligence and machine learning technologies. (
+              viTech is a software development team composed of six members from different disciplines that are currently undertaking CSIT321 at the University of Wollongong. The team aims to enhance the JIRA ecosystem by providing suggestive functionality using artificial intelligence and machine learning technologies. 
             </p>
             <p>Read details below to learn more about the viTech Team.</p>
             <!-- Main heading -->
@@ -268,7 +268,7 @@
               <!--Grid row-->
               <div class="row">
                 <div class="col-md-6">
-                  <img src="Capture.PNG" class="img-fluid z-depth-1-half" alt="">
+                  <img src="macleay.png" class="img-fluid z-depth-1-half" alt="">
                 </div>
                 <div class="col-10 mb-2 pl-3">
                   <h5 class="feature-title font-bold mb-1">Macleay Stephenson</h5>
