changes requested by macleay

--- a/index.html
+++ b/index.html
@@ -205,9 +205,8 @@
           <!--Grid column-->
           <div class="col-lg-6 col-md-12">
 
-            <p class="h5 text-center mb-4">AIIA</p>
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=wj7Tzcc6cpo&feature=youtu.be" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/IS6yHI4eIFo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
           <!--/Grid column-->
@@ -268,11 +267,12 @@
               <!--Grid row-->
               <div class="row">
                 <div class="col-md-6">
-                  <img src="macleay.png" class="img-fluid z-depth-1-half" alt="">
+                  <img src="macleay.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-10 mb-2 pl-3">
                   <h5 class="feature-title font-bold mb-1">Macleay Stephenson</h5>
-                  <p class="grey-text mt-2">Bachelor of Engineering- Honours (Mechatronics) and Bachelor of Computer Science - Team Leader
+                  <h6 class="feature-title font-bold mb-1">Team Leader</h6>
+                  <p class="grey-text mt-2">Bachelor of Engineering- Honours (Mechatronics) and Bachelor of Computer Science
                   </p>
                 </div>
               </div>
@@ -285,11 +285,12 @@
               <!--Grid row-->
               <div class="row">
                 <div class="col-md-6">
-                    <img src="kyle11.png" class="img-fluid z-depth-1-half" alt="">
+                    <img src="kyle11.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-10 mb-2">
                   <h5 class="feature-title font-bold mb-1">Kyle Robinson</h5>
-                  <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering & Cyber Security - Backend Developer
+                  <h6 class="feature-title font-bold mb-1">Backend Developer </h6>
+                  <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering & Cyber Security
                   </p>
                 </div>
               </div>
@@ -302,11 +303,12 @@
               <!--Grid row-->
               <div class="row">
                 <div class="col-md-6">
-                  <img src="david.png" class="img-fluid z-depth-1-half" alt="">
+                  <img src="david.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-10 mb-2">
                   <h5 class="feature-title font-bold mb-1">David Carter</h5>
-                  <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering & Cyber Security - Backend Developer
+                  <h6 class="feature-title font-bold mb-1">Backend Developer </h6>
+                  <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering & Cyber Security
                   </p>
                 </div>
               </div>
@@ -326,11 +328,12 @@
               <!--Grid row-->
               <div class="row">
                 <div class="col-md-6">
-                  <img src="oliver.png" class="img-fluid z-depth-1-half" alt="">
+                  <img src="oliver.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-10 mb-2">
                   <h5 class="feature-title font-bold mb-1">Oliver Rankin-Starcveic </h5>
-                  <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering & Game and Mobile Development – Backend Developer</p>
+                  <h6 class="feature-title font-bold mb-1">Backend Developer </h6>
+                  <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering & Game and Mobile Development</p>
                 </div>
               </div>
               <!--/Grid row-->
@@ -342,11 +345,12 @@
               <!--Grid row-->
               <div class="row">
                 <div class="col-md-6">
-                  <img src="matt.png" class="img-fluid z-depth-1-half" alt="">
+                  <img src="matt.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-10 mb-2">
                   <h5 class="feature-title font-bold mb-1">Matthew Tuchin</h5>
-                  <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering & Digital Systems Security – Backend Developer
+                  <h6 class="feature-title font-bold mb-1">Backend Developer </h6>
+                  <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering & Digital Systems Security
                   </p>
                 </div>
               </div>
@@ -359,11 +363,12 @@
               <!--Grid row-->
               <div class="row">
                 <div class="col-md-6">
-                  <img src="arvind.png" class="img-fluid z-depth-1-half" alt="">
+                  <img src="arvind.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-10 mb-2">
                   <h5 class="feature-title font-bold mb-1">Arvind Thillainathan</h5>
-                  <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering - Frontend Developer</p>
+                  <h6 class="feature-title font-bold mb-1">Frontend Developer </h6>
+                  <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering</p>
                 </div>
               </div>
               <!--/Grid row-->
