Fixed alignment of bullet points, updated copyright

--- a/Product.html
+++ b/Product.html
@@ -41,12 +41,12 @@
 
                     <!-- Left -->
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link waves-effect" href="index.html">Home
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link waves-effect" href="#" target="_self">Product</a>
                         </li>
         
@@ -97,16 +97,19 @@
                     <!--Section heading-->
                     <h2 class="h1 text-center mb-5">Artificial Intelligence for Issue Analytics</h2>
                     <!--Section description-->
-                    <p class="text-center">
-                        AIIA helps teams using JIRA by understanding your project history
-                        <ul class="text-center">
-                                <li class="text-center" >Optimal decisions</li>
-                                <li>Save time</li>
-                                <li>Resolve Confilcts</li>
-                                <li>Remain consistent</li>
-                        </ul>
-                    </p>
-                  
+                        <p class="text-center">
+                            AIIA helps teams using JIRA by understanding your project history
+                            <div class="row">
+                                <div class="col-md-3 col-md-offset-4 container-fluid">
+                                    <ul class="text-center">
+                                            <li class="text-center" >Optimal decisions</li>
+                                            <li>Save time</li>
+                                            <li>Resolve Confilcts</li>
+                                            <li>Remain consistent</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </p>
                     <p class="text-center mb-5 pb-5">
                         AIIA is a machine learning plugin developed for the JIRA ecosystem. This plugin can suggest optimal human resource assignment,
                         task componenents, task labelling and story point estimates for any task as requested. In the future, the plugin is to be extended to add visualization of issue
@@ -265,8 +268,7 @@
 
         <!--Copyright-->
         <div class="footer-copyright py-3">
-            © 2018 Copyright:
-            <p>viTech</p>
+            &copy; viTech 2019
         </div>
         <!--/.Copyright-->
 
