Minor aesthetic changes for product

--- a/Product.html
+++ b/Product.html
@@ -65,6 +65,7 @@
 
     <!--Main layout-->
     <main class="mt-5 pt-5">
+		<br />
         <div class="container">
 
             <!--Section: Jumbotron-->
@@ -74,14 +75,16 @@
                 <div class="card-body text-white text-center py-5 px-5 my-5">
 
                     <h1 class="mb-4">
-                        <strong>?????</strong>
+                        <strong>Artificial Intelligence for Issue Analytics</strong>
                     </h1>
                     <p>
-                        <strong>???</strong>
+                        <strong>AIIA helps teams using JIRA by understanding your project history</strong>
                     </p>
                     <p class="mb-4">
-                        <strong>The most comprehensive tutorial  Video and written
-                            versions available. Create your own, stunning website.</strong>
+                            Optimise decisions<br />
+                            Save time<br />
+                            Resolve Confilcts<br />
+                            Remain consistent<br />
                     </p>
 
                 </div>
@@ -94,19 +97,8 @@
 
                 <!-- Heading & Description -->
                 <div class="wow fadeIn">
-                    <!--Section heading-->
-                    <h2 class="h1 text-center mb-5">Artificial Intelligence for Issue Analytics</h2>
-                    <!--Section description-->
-                    <p class="text-center">
-                        AIIA helps teams using JIRA by understanding your project history
-                        <ul class="text-center">
-                                <li class="text-center" >Optimal decisions</li>
-                                <li>Save time</li>
-                                <li>Resolve Confilcts</li>
-                                <li>Remain consistent</li>
-                        </ul>
-                    </p>
-                  
+					<br />
+					<br />	
                     <p class="text-center mb-5 pb-5">
                         AIIA is a machine learning plugin developed for the JIRA ecosystem. This plugin can suggest optimal human resource assignment,
                         task componenents, task labelling and story point estimates for any task as requested. In the future, the plugin is to be extended to add visualization of issue
@@ -126,11 +118,11 @@
                         <p class="grey-text">
                             The primary target market for this product shall be JIRA users who are:
                             <ul class="a">
-                                    <li>Part of small to medium-sized enterprises- As they make up most enterprises using JIRA, and most likely posses the least resources, therefore an AI helper would be of more aid to their organisation.  </li>
-                                    <li>Scrum development team members – Developers who are using JIRA as a management tool shall be able to use this product to aid their decision-making process. </li>
-                                    <li>Project managers / Scrum masters – Project managers or Scrum masters may use this product to confirm or review their own conclusions in the areas of assistance, thus decreasing the time spent on these tasks. </li>
-                                    <li>English-speaking – Appeals to most JIRA users, and is a language spoken by all members of the development team for the product.   </li>
-                                    <li>Predictive analytics – Is a niche market within the Atlassian marketplace. </li>
+                                    <li><strong>Part of small to medium-sized enterprises</strong> - As they make up most enterprises using JIRA, and most likely posses the least resources, therefore an AI helper would be of more aid to their organisation.  </li>
+                                    <li><strong>Scrum development team members</strong> – Developers who are using JIRA as a management tool shall be able to use this product to aid their decision-making process. </li>
+                                    <li><strong>Project managers / Scrum masters</strong> – Project managers or Scrum masters may use this product to confirm or review their own conclusions in the areas of assistance, thus decreasing the time spent on these tasks. </li>
+                                    <li><strong>English-speaking</strong> – Appeals to most JIRA users, and is a language spoken by all members of the development team for the product.   </li>
+                                    <li><strong>Predictive analytics</strong> – Is a niche market within the Atlassian marketplace. </li>
                             </ul>
                         </p>
                         
@@ -169,13 +161,13 @@
                             <p>
                                 Development Environments
                                 <ul class="a">
-                                        <li>JIRA(ACE) </li>
+                                        <li><strong>JIRA(ACE)</strong> </li>
                                             <ul class="a">
                                                 <li>
                                                     The Atlassian Connect Express (ACE) framework is constructed in Node.js and aims to provide a simple yet effective way to create a plugin for the JIRA ecosystem. From this, interface elements can be implemented using AUI or Atlaskit to provide the user with a portal for powerful functionality at just a few clicks away.  
                                                 </li>
                                             </ul>
-                                        <li>Python</li>
+                                        <li><strong>Python</strong></li>
                                             <ul class="a">
                                                 <li>
                                                     Powerful machine learning libraries have been engaged with in the Python language and are used to process data to create the core functionality of this JIRA plugin. The microframework Flask developed for Python has been used to implement a REST-ful interface for the ACE framework to communicate with.   
