--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand" href="#" target="_self">
-        <strong>viTech</strong>
-      </a>
+      <img src="logo.png" width="160px" height="160px"class="img-fluid" alt="">
 
       <!-- Collapse -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -260,7 +258,7 @@
           <h2 class="my-5 h3 text-center">Our Team</h2>
   
           <!--First row-->
-          <div class="row features-small mt-5 wow fadeIn">
+          <div class="row features-small mt-5 wow fadeIn text-center">
   
             <!--Grid column-->
             <div class="col-xl-3 col-lg-6">
@@ -321,7 +319,7 @@
           <!--/First row-->
   
           <!--Second row-->
-          <div class="row features-small mt-4 wow fadeIn">
+          <div class="row features-small mt-4 wow fadeIn text-center">
   
             <!--Grid column-->
             <div class="col-xl-3 col-lg-6">
