--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <div class="col-xl-3 col-lg-6">
               <!--Grid row-->
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-10 mb-2">
                   <img src="macleay.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-10 mb-2 pl-3">
@@ -282,7 +282,7 @@
             <div class="col-xl-3 col-lg-6">
               <!--Grid row-->
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-10 mb-2">
                     <img src="kyle11.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-10 mb-2">
@@ -300,7 +300,7 @@
             <div class="col-xl-3 col-lg-6">
               <!--Grid row-->
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-10 mb-2">
                   <img src="david.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-10 mb-2">
@@ -325,7 +325,7 @@
             <div class="col-xl-3 col-lg-6">
               <!--Grid row-->
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-10 mb-2">
                   <img src="oliver.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-10 mb-2">
@@ -342,7 +342,7 @@
             <div class="col-xl-3 col-lg-6">
               <!--Grid row-->
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-10 mb-2">
                   <img src="matt.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-10 mb-2">
@@ -360,7 +360,7 @@
             <div class="col-xl-3 col-lg-6">
               <!--Grid row-->
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-10 mb-2">
                   <img src="arvind.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-10 mb-2">
