--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <!--Grid column-->
           <div class="col-md-6 mb-4">
 
-            <img src="https://mdbootstrap.com/img/Marketing/mdb-press-pack/mdb-main.jpg" class="img-fluid z-depth-1-half" alt="">
+            <img src="images/wollongong.jpg" class="img-fluid z-depth-1-half" alt="">
 
           </div>
           <!--Grid column-->
