--- a/Product.html
+++ b/Product.html
@@ -126,7 +126,9 @@
                         
                     </div>
                     <!--Grid column-->
-
+					<div class="col-lg-6 col-md-12">
+						
+					</div>
 
                 </div>
                 <!--Grid row-->
