--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>viTech</title>
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <!-- Bootstrap core CSS -->
@@ -70,6 +87,9 @@
           <li class="nav-item">
             <a class="nav-link" href="Product.html" target="_self">Product</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="testUM.html" target="_self">User Manual</a>
+          </li>
         </ul>
 
       </div>
@@ -103,7 +123,7 @@
 
             <!-- Content -->
             <div class="text-center white-text mx-5 wow fadeIn">
-              <h1 class="mb-4">
+              <h1 class="mb-4" style="font-size: 100px; font-weight: bold">
                   <strong>viTech </strong>
               </h1>
               <h1 class="mb-4">
@@ -121,17 +141,6 @@
 
     </div>
     <!--/.Slides-->
-
-    <!--Controls-->
-    <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-    <!--/.Controls-->
 
   </div>
   <!--/.Carousel Wrapper-->
@@ -173,7 +182,7 @@
             <!--Second row-->
             <div class="row">
               <div class="col-1 mr-3">
-                <i class="fas fa-book fa-2x blue-text"></i>
+                <i class="fas fa-cog fa-2x blue-text"></i>
               </div>
               <div class="col-10">
                 <h5 class="feature-title">Process</h5>
@@ -188,7 +197,7 @@
             <!--Third row-->
             <div class="row">
               <div class="col-1 mr-3">
-                <i class="fas fa-graduation-cap fa-2x cyan-text"></i>
+                <i class="fas fa-comments fa-2x cyan-text"></i>
               </div>
               <div class="col-10">
                 <h5 class="feature-title">Suggest</h5>
@@ -238,7 +247,6 @@
             <p>
               viTech is a software development team composed of six members from different disciplines that are currently undertaking CSIT321 at the University of Wollongong. The team aims to enhance the JIRA ecosystem by providing suggestive functionality using artificial intelligence and machine learning technologies. 
             </p>
-            <p>Read details below to learn more about the viTech Team.</p>
             <!-- Main heading -->
 
           </div>
@@ -261,13 +269,13 @@
           <div class="row features-small mt-5 wow fadeIn text-center">
   
             <!--Grid column-->
-            <div class="col-xl-3 col-lg-6">
+            <div class="cl-xs-6 col-md-4">
               <!--Grid row-->
               <div class="row">
-                <div class="col-10 mb-2">
-                  <img src="macleay.png" class="img-fluid" alt="">
+                <div class="col-12 mb-2">
+                  <img src="macleay new.png" class="img-fluid" alt="" style="max-width: 150px">
                 </div>
-                <div class="col-10 mb-2 pl-3">
+                <div class="col-12 mb-2">
                   <h5 class="feature-title font-bold mb-1">Macleay Stephenson</h5>
                   <h6 class="feature-title font-bold mb-1">Team Leader</h6>
                   <p class="grey-text mt-2">Bachelor of Engineering- Honours (Mechatronics) and Bachelor of Computer Science
@@ -279,13 +287,13 @@
             <!--/Grid column-->
   
             <!--Grid column-->
-            <div class="col-xl-3 col-lg-6">
+            <div class="col-xs-6 col-md-4">
               <!--Grid row-->
               <div class="row">
-                <div class="col-10 mb-2">
-                    <img src="kyle11.png" class="img-fluid" alt="">
+                <div class="col-12 mb-2">
+                  <img src="kyle new.png" class="img-fluid" alt="" style="max-width: 150px">
                 </div>
-                <div class="col-10 mb-2">
+                <div class="col-12 mb-2">
                   <h5 class="feature-title font-bold mb-1">Kyle Robinson</h5>
                   <h6 class="feature-title font-bold mb-1">Backend Developer </h6>
                   <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering & Cyber Security
@@ -297,13 +305,13 @@
             <!--/Grid column-->
   
             <!--Grid column-->
-            <div class="col-xl-3 col-lg-6">
+            <div class="col-xs-6 col-md-4">
               <!--Grid row-->
               <div class="row">
-                <div class="col-10 mb-2">
-                  <img src="david.png" class="img-fluid" alt="">
+                <div class="col-12 mb-2">
+                  <img src="david new.png" class="img-fluid" alt="" style="max-width: 150px">
                 </div>
-                <div class="col-10 mb-2">
+                <div class="col-12 mb-2">
                   <h5 class="feature-title font-bold mb-1">David Carter</h5>
                   <h6 class="feature-title font-bold mb-1">Backend Developer </h6>
                   <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering & Cyber Security
@@ -312,23 +320,16 @@
               </div>
               <!--/Grid row-->
             </div>
-            <!--/Grid column-->
-  
-  
-          </div>
-          <!--/First row-->
-  
-          <!--Second row-->
-          <div class="row features-small mt-4 wow fadeIn text-center">
+            <!--/Grid column-->  
   
             <!--Grid column-->
-            <div class="col-xl-3 col-lg-6">
+            <div class="col-xs-6 col-md-4">
               <!--Grid row-->
               <div class="row">
-                <div class="col-10 mb-2">
-                  <img src="oliver.png" class="img-fluid" alt="">
+                <div class="col-12 mb-2">
+                  <img src="oliver new.png" class="img-fluid" alt="" style="width: 150px">
                 </div>
-                <div class="col-10 mb-2">
+                <div class="col-12 mb-2">
                   <h5 class="feature-title font-bold mb-1">Oliver Rankin-Starcveic </h5>
                   <h6 class="feature-title font-bold mb-1">Backend Developer </h6>
                   <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering & Game and Mobile Development</p>
@@ -339,13 +340,13 @@
             <!--/Grid column-->
   
             <!--Grid column-->
-            <div class="col-xl-3 col-lg-6">
+            <div class="col-xs-6 col-md-4">
               <!--Grid row-->
               <div class="row">
-                <div class="col-10 mb-2">
-                  <img src="matt.png" class="img-fluid" alt="">
+                <div class="col-12 mb-2">
+                  <img src="matt new.png" class="img-fluid" alt="" style="width: 150px">
                 </div>
-                <div class="col-10 mb-2">
+                <div class="col-12 mb-2">
                   <h5 class="feature-title font-bold mb-1">Matthew Tuchin</h5>
                   <h6 class="feature-title font-bold mb-1">Backend Developer </h6>
                   <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering & Digital Systems Security
@@ -357,13 +358,13 @@
             <!--/Grid column-->
   
             <!--Grid column-->
-            <div class="col-xl-3 col-lg-6">
+            <div class="col-xs-6 col-md-4">
               <!--Grid row-->
               <div class="row">
-                <div class="col-10 mb-2">
-                  <img src="arvind.png" class="img-fluid" alt="">
+                <div class="col-12 mb-2">
+                  <img src="arvind new.png" class="img-fluid" alt="" style="width: 150px">
                 </div>
-                <div class="col-10 mb-2">
+                <div class="col-12 mb-2">
                   <h5 class="feature-title font-bold mb-1">Arvind Thillainathan</h5>
                   <h6 class="feature-title font-bold mb-1">Frontend Developer </h6>
                   <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering</p>
@@ -378,9 +379,6 @@
   
         </section>
         <!--Section: More-->
-
-      <hr class="mb-5">
-
      
     </div>
   </main>
@@ -395,14 +393,6 @@
       <p>vitechproductions@gmail.com</p>
     </div>
     <!--/.Call to action-->
-
-    <hr class="my-4">
-
-    <!-- Social icons -->
-    <div class="pb-4">
-     
-    </div>
-    <!-- Social icons -->
 
     <!--Copyright-->
     <div class="footer-copyright py-3">
