--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 <div class="col-12 mb-2">
                   <h5 class="feature-title font-bold mb-1">Matthew Tuchin</h5>
                   <h6 class="feature-title font-bold mb-1">Backend Developer </h6>
-                  <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering & Digital Systems Security
+                  <p class="grey-text mt-2">Bachelor of Computer Science: Software Engineering
                   </p>
                 </div>
               </div>
