changes to the website

--- a/Product.html
+++ b/Product.html
@@ -38,45 +38,9 @@
     <!--Main Navigation-->
     <header>
 
-        <!-- Navbar -->
-        <nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
-            <div class="container">
-
-                <!-- Brand -->
-                <img src="logo.png" width="80px" height="80px"class="img-fluid" alt="">
-
-                <!-- Collapse -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <!-- Links -->
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-                    <!-- Left -->
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link waves-effect" href="index.html">Home
-                            </a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link waves-effect" href="#" target="_self">Product</a>
-                                <span class="sr-only">(current)</span>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link waves-effect" href="testUM.html">User Manual
-                            </a>
-                        </li>
-                    </ul>
-
-                    <!-- Right -->
-                    
-                </div>
-
-            </div>
-        </nav>
-        <!-- Navbar -->
+        <div class="view ">
+            <a class = "button button4"  href="index.html">Return back</a>
+        </div>
 
     </header>
     <!--Main Navigation-->
@@ -95,15 +59,6 @@
                     <h1 class="mb-4">
                         <strong>Artificial Intelligence for Issue Analytics</strong>
                     </h1>
-                    <p style="font-size: 25px">
-                        <strong>
-                            Optimise decisions<br />
-                            Save time<br />
-                            Resolve conflicts<br />
-                            Remain consistent<br />
-                        </strong>
-                    </p>
-
                 </div>
                 <!-- Content -->
             </section>
